Demos/MSVCPP/Shared_MSVCPP/Sepia2_Lib.h




  // ---  VCL 828 functions (PPL400)  -----------------------------------------

  __declspec(DIRECTION)  int   __stdcall SEPIA2_VCL_GetUIConstants            (int iDevIdx,     int   iSlotId,  int* piMinUserValueTmp, int* piMaxUserValueTmp, int* piUserResolutionTmp);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_VCL_GetTemperature            (int iDevIdx,     int   iSlotId,  int* piTemperature);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_VCL_SetTemperature            (int iDevIdx,     int   iSlotId,  int   iTemperature);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_VCL_GetBiasVoltage            (int iDevIdx,     int   iSlotId,  int* piBiasVoltage);
    typedef union {
      struct {
        unsigned short wT_Pump1;
        unsigned short wT_Pump2;
        unsigned short wT_Pump3;
        unsigned short wT_Pump4;
        unsigned short wT_FiberStack;
        unsigned short wT_AuxAdjust;
      } Temperatures;
      unsigned short wT [SEPIA2_SPM_TEMPERATURE_SENSORCOUNT];
    } T_SPM_Temperatures;

    typedef T_SPM_Temperatures* T_ptrSPM_Temperatures;


    typedef struct {
      T_SPM_Temperatures Temperatures;
      unsigned short     wOverAllCurrent;
      unsigned short     wOptionalSensor1;
      unsigned short     wOptionalSensor2;
    } T_SPM_SensorData;

    typedef T_SPM_SensorData* T_ptrSPM_SensorData;

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SPM_DecodeModuleState         (unsigned short wState, char* cStatusText);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SPM_GetFWVersion              (int iDevIdx,     int   iSlotId,  unsigned long* pulFWVersion);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SPM_GetSensorData             (int iDevIdx,     int   iSlotId,  T_ptrSPM_SensorData   pSensorData);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SPM_GetTemperatureAdjust      (int iDevIdx,     int   iSlotId,  T_ptrSPM_Temperatures pTempAdjust);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SPM_GetStatusError            (int iDevIdx,     int   iSlotId,  unsigned short* pwState, short* piErrorCode);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SPM_UpdateFirmware            (int iDevIdx,     int   iSlotId,  char* pcFWFileName);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SPM_SetFRAMWriteProtect       (int iDevIdx,     int   iSlotId,  unsigned char   bWriteProtect);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SPM_GetFiberAmplifierFail     (int iDevIdx,     int   iSlotId,  unsigned char* pbFiberAmpFail);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SPM_ResetFiberAmplifierFail   (int iDevIdx,     int   iSlotId,  unsigned char   bFiberAmpFail);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SPM_GetPumpPowerState         (int iDevIdx,     int   iSlotId,  unsigned char* pbPumpState, unsigned char* pbPumpMode);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SPM_SetPumpPowerState         (int iDevIdx,     int   iSlotId,  unsigned char   bPumpState, unsigned char   bPumpMode);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SPM_GetOperationTimers        (int iDevIdx,     int   iSlotId,  unsigned long*  pulMainPwrSwitch, unsigned long*  pulUTOverAll, unsigned long*  pulUTSinceDelivery, unsigned long*  pulUTSinceFiberChg);



  // ---  Solea SWS functions  ------------------------------------------------

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SWS_DecodeModuleType          (int iModuleType,       char* cModulType);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SWS_DecodeModuleState         (unsigned short wState, char* cStatusText);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SWS_GetModuleType             (int iDevIdx,     int   iSlotId,  int* piModuleType);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SWS_GetStatusError            (int iDevIdx,     int   iSlotId,  unsigned short* pwState,         short*          piErrorCode);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SWS_GetParamRanges            (int iDevIdx,     int   iSlotId,  unsigned long*  pulUpperWL,      unsigned long*  pulLowerWL,    unsigned long* pulIncrWL, unsigned long* pulPPMToggleWL, unsigned long* pulUpperBW, unsigned long* pulLowerBW, unsigned long* pulIncrBW, int* piUpperBeamPos, int* piLowerBeamPos, int* piIncrBeamPos);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SWS_GetParameters             (int iDevIdx,     int   iSlotId,  unsigned long*  pulWaveLength,   unsigned long*  pulBandWidth);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SWS_SetParameters             (int iDevIdx,     int   iSlotId,  unsigned long    ulWaveLength,   unsigned long    ulBandWidth);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SWS_GetIntensity              (int iDevIdx,     int   iSlotId,  unsigned long*  pulIntensityRaw, float*          pfIntensity);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SWS_GetFWVersion              (int iDevIdx,     int   iSlotId,  unsigned long*  pulFWVersion);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SWS_UpdateFirmware            (int iDevIdx,     int   iSlotId,  char* pcFWFileName);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SWS_SetFRAMWriteProtect       (int iDevIdx,     int   iSlotId,  unsigned char   bWriteProtect);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SWS_GetBeamPos                (int iDevIdx,     int   iSlotId,  short* piBeamVPos,  short* piBeamHPos);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SWS_SetBeamPos                (int iDevIdx,     int   iSlotId,  short   iBeamVPos,  short   iBeamHPos);


  __declspec(DIRECTION)  int   __stdcall SEPIA2_SWS_SetCalibrationMode        (int iDevIdx,     int   iSlotId,  unsigned char   bCalibrationMode);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SWS_GetCalTableSize           (int iDevIdx,     int   iSlotId,  unsigned short* pwWLIdxCount, unsigned short* pwBWIdxCount);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SWS_SetCalTableSize           (int iDevIdx,     int   iSlotId,  unsigned short  wWLIdxCount,  unsigned short   wBWIdxCount, unsigned char bInit);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SWS_GetCalPointInfo           (int iDevIdx,     int   iSlotId,  short  iWLIdx, short iBWIdx,  unsigned long* pulWaveLength, unsigned long* pulBandWidth, short* piBeamVPos, short* piBeamHPos);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SWS_SetCalPointValues         (int iDevIdx,     int   iSlotId,  short  iWLIdx, short iBWIdx,  short iBeamVPos, short iBeamHPos);



  // ---  Solea SSM functions  ------------------------------------------------

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SSM_DecodeFreqTrigMode        (int iDevIdx,     int   iSlotId,  int   iMainFreqTrigIdx, char* cMainFreqTrig, int*  piMainFreq,   unsigned char* pbTrigLevelEnabled);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SSM_GetTrigLevelRange         (int iDevIdx,     int   iSlotId,  int* piUpperTL,         int*  piLowerTL,     int*  piResolTL);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SSM_GetTriggerData            (int iDevIdx,     int   iSlotId,  int* piMainFreqTrigIdx, int*  piTrigLevel);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SSM_SetTriggerData            (int iDevIdx,     int   iSlotId,  int   iMainFreqTrigIdx, int    iTrigLevel);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SSM_SetFRAMWriteProtect       (int iDevIdx,     int   iSlotId,  unsigned char   bWriteProtect);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_SSM_GetFRAMWriteProtect       (int iDevIdx,     int   iSlotId,  unsigned char* pbWriteProtect);



  // ---  VisUV/IR  VUV / VIR functions  ------------------------------------------

  __declspec(DIRECTION)  int   __stdcall SEPIA2_VUV_VIR_GetDeviceType         (int iDevIdx,     int   iSlotId,  char* pcDeviceType,     unsigned char* pbOptCW, unsigned char* pbOptFanSwitch);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_VUV_VIR_DecodeFreqTrigMode    (int iDevIdx,     int   iSlotId,  int    iMainTrigSrcIdx, int    iMainFreqDivIdx, char* pcMainFreqTrig, int*  piMainFreq, unsigned char* pbTrigDividerEnabled, unsigned char* pbTrigLevelEnabled);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_VUV_VIR_GetTrigLevelRange     (int iDevIdx,     int   iSlotId,  int*  piUpperTL,        int*  piLowerTL,        int*  piResolTL);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_VUV_VIR_GetTriggerData        (int iDevIdx,     int   iSlotId,  int*  piMainTrigSrcIdx, int*  piMainFreqDivIdx, int*  piTrigLevel);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_VUV_VIR_SetTriggerData        (int iDevIdx,     int   iSlotId,  int    iMainTrigSrcIdx, int    iMainFreqDivIdx, int    iTrigLevel);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_VUV_VIR_GetIntensityRange     (int iDevIdx,     int   iSlotId,  int*  piUpperIntens,    int*  piLowerIntens,    int*  piResolIntens);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_VUV_VIR_GetIntensity          (int iDevIdx,     int   iSlotId,  int*  piIntensity);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_VUV_VIR_SetIntensity          (int iDevIdx,     int   iSlotId,  int    iIntensity);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_VUV_VIR_GetFan                (int iDevIdx,     int   iSlotId,  unsigned char* pbFanRunning);

  __declspec(DIRECTION)  int   __stdcall SEPIA2_VUV_VIR_SetFan                (int iDevIdx,     int   iSlotId,  unsigned char bFanRunning);