Demos/MSVCSharp/Shared_MSVCSharp/Sepia2_Lib.cs


    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_VCL_GetUIConstants(int iDevIdx, int iSlotId, out int piMinUserValueTmp, out int piMaxUserValueTmp, out int piUserResolutionTmp);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_VCL_GetTemperature(int iDevIdx, int iSlotId, out int piTemperature);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_VCL_SetTemperature(int iDevIdx, int iSlotId, int iTemperature);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_VCL_GetBiasVoltage(int iDevIdx, int iSlotId, out int piBiasVoltage);


    // ---  Solea SPM functions  ------------------------------------------------

    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SPM_DecodeModuleState(ushort wState, StringBuilder cStatusText);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    //public extern static int SEPIA2_SPM_GetFWVersion(int iDevIdx, int iSlotId, out uint pulFWVersion);         //T_Module_FWVers
    public extern static int SEPIA2_SPM_GetFWVersion(int iDevIdx, int iSlotId, out T_Module_FWVers pulFWVersion);         //
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SPM_GetSensorData(int iDevIdx, int iSlotId, out T_SPM_SensorData pSensorData);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SPM_GetTemperatureAdjust(int iDevIdx, int iSlotId, out T_SPM_Temperatures pTempAdjust);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SPM_GetStatusError(int iDevIdx, int iSlotId, out ushort pwState, out short piErrorCode);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SPM_UpdateFirmware(int iDevIdx, int iSlotId, StringBuilder pcFWFileName);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SPM_SetFRAMWriteProtect(int iDevIdx, int iSlotId, byte bWriteProtect);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SPM_GetFiberAmplifierFail(int iDevIdx, int iSlotId, out byte pbFiberAmpFail);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SPM_ResetFiberAmplifierFail(int iDevIdx, int iSlotId, byte bFiberAmpFail);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SPM_GetPumpPowerState(int iDevIdx, int iSlotId, out byte pbPumpState, out byte pbPumpMode);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SPM_SetPumpPowerState(int iDevIdx, int iSlotId, byte bPumpState, byte bPumpMode);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SPM_GetOperationTimers(int iDevIdx, int iSlotId, out uint pulMainPwrSwitch, out uint pulUTOverAll, out uint pulUTSinceDelivery, out uint pulUTSinceFiberChg);


    // ---  Solea SWS functions  ------------------------------------------------

    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SWS_DecodeModuleType(int iModuleType, StringBuilder cModulType);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SWS_DecodeModuleState(ushort wState, StringBuilder cStatusText);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SWS_GetModuleType(int iDevIdx, int iSlotId, out int piModuleType);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SWS_GetStatusError(int iDevIdx, int iSlotId, out ushort pwState, out short piErrorCode);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SWS_GetParamRanges(int iDevIdx, int iSlotId, out uint pulUpperWL, out uint pulLowerWL, out uint pulIncrWL, out uint pulPPMToggleWL, out uint pulUpperBW, out uint pulLowerBW, out uint pulIncrBW, out int piUpperBeamPos, out int piLowerBeamPos, out int piIncrBeamPos);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SWS_GetParameters(int iDevIdx, int iSlotId, out uint pulWaveLength, out uint pulBandWidth);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SWS_SetParameters(int iDevIdx, int iSlotId, uint ulWaveLength, uint ulBandWidth);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SWS_GetIntensity(int iDevIdx, int iSlotId, out uint pulIntensityRaw, out float pfIntensity);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    //        public extern static int SEPIA2_SWS_GetFWVersion(int iDevIdx, int iSlotId, out uint pulFWVersion);
    public extern static int SEPIA2_SWS_GetFWVersion(int iDevIdx, int iSlotId, out T_Module_FWVers pulFWVersion);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SWS_UpdateFirmware(int iDevIdx, int iSlotId, StringBuilder pcFWFileName);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SWS_SetFRAMWriteProtect(int iDevIdx, int iSlotId, byte bWriteProtect);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SWS_GetBeamPos(int iDevIdx, int iSlotId, out short piBeamVPos, out short piBeamHPos);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SWS_SetBeamPos(int iDevIdx, int iSlotId, short iBeamVPos, short iBeamHPos);

    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SWS_SetCalibrationMode(int iDevIdx, int iSlotId, byte bCalibrationMode);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SWS_GetCalTableSize(int iDevIdx, int iSlotId, out ushort pwWLIdxCount, out ushort pwBWIdxCount);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SWS_SetCalTableSize(int iDevIdx, int iSlotId, ushort wWLIdxCount, ushort wBWIdxCount, byte bInit);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SWS_GetCalPointInfo(int iDevIdx, int iSlotId, short iWLIdx, short iBWIdx, out uint pulWaveLength, out uint pulBandWidth, out short piBeamVPos, out short piBeamHPos);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SWS_SetCalPointValues(int iDevIdx, int iSlotId, short iWLIdx, short iBWIdx, short iBeamVPos, short iBeamHPos);


    // ---  Solea SSM functions  ------------------------------------------------

    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SSM_DecodeFreqTrigMode(int iDevIdx, int iSlotId, int iMainFreqTrigIdx, StringBuilder cMainFreqTrig, out int piMainFreq, out byte pbTrigLevelEnabled);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SSM_GetTrigLevelRange(int iDevIdx, int iSlotId, out int piUpperTL, out int piLowerTL, out int piResolTL);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SSM_GetTriggerData(int iDevIdx, int iSlotId, out int piMainFreqTrigIdx, out int piTrigLevel);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SSM_SetTriggerData(int iDevIdx, int iSlotId, int iMainFreqTrigIdx, int iTrigLevel);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SSM_SetFRAMWriteProtect(int iDevIdx, int iSlotId, byte bWriteProtect);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_SSM_GetFRAMWriteProtect(int iDevIdx, int iSlotId, out byte pbWriteProtect);


    // ---  VisUV/IR  VUV / VIR functions  ------------------------------------------

    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_VUV_VIR_GetDeviceType(int iDevIdx, int iSlotId, StringBuilder pcDeviceType, out byte pbOptCW, out byte pbOptFanSwitch);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_VUV_VIR_DecodeFreqTrigMode(int iDevIdx, int iSlotId, int iMainTrigSrcIdx, int iMainFreqDivIdx, StringBuilder pcMainFreqTrig, out int piMainFreq, out byte pbTrigDividerEnabled, out byte pbTrigLevelEnabled);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_VUV_VIR_GetTrigLevelRange(int iDevIdx, int iSlotId, out int piUpperTL, out int piLowerTL, out int piResolTL);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_VUV_VIR_GetTriggerData(int iDevIdx, int iSlotId, out int piMainTrigSrcIdx, out int piMainFreqDivIdx, out int piTrigLevel);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_VUV_VIR_SetTriggerData(int iDevIdx, int iSlotId, int iMainTrigSrcIdx, int iMainFreqDivIdx, int iTrigLevel);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_VUV_VIR_GetIntensityRange(int iDevIdx, int iSlotId, out int piUpperIntens, out int piLowerIntens, out int piResolIntens);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_VUV_VIR_GetIntensity(int iDevIdx, int iSlotId, out int piIntensity);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_VUV_VIR_SetIntensity(int iDevIdx, int iSlotId, int iIntensity);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_VUV_VIR_GetFan(int iDevIdx, int iSlotId, out byte pbFanRunning);
    [DllImport(SEPIA2_LIB, CallingConvention = CallingConvention.StdCall)]
    public extern static int SEPIA2_VUV_VIR_SetFan(int iDevIdx, int iSlotId, byte bFanRunning);


    // ---  Prima  PRI functions  ------------------------------------------
